parser/tests/parser/expressions/invalid_contents/escape.mf2
{1 abc\a}
=== spans ===
                    {1 abc\a}
Pattern             ^^^^^^^^^
LiteralExpression   ^^^^^^^^^
Number               ^
Number.integral      ^
=== diagnostics ===
The character 'a' can not be escaped as escape sequences can only escape '}', '{', '|', and '\'. (at @7..8)
  {1 abc\a}
         ^
Placeholder expression contains invalid content. (at @3..8)
  {1 abc\a}
     ^^^^^
=== ast ===
Pattern {
    parts: [
        LiteralExpression {
            span: @0..9,
            literal: Number {
                start: @1,
                raw: "1",
                is_negative: false,
                integral_len: 1,
                fractional_len: None,
                exponent_len: None,
            },
            annotation: None,
            attributes: [],
        },
    ],
}